--- a/index.html
+++ b/index.html
@@ -85,27 +85,27 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="November 2021 – current">
+                <h3>Raising Cane's</h3>
+                <h4>Bird Specialist</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    I lead a restaurant team in a fast paced environment to ensure a fast, friendly and clean service. Most importantly, my goal is to have fun and fry chicken!
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="June 2017 – October 2021">
+                <h3>Rem Torque-Test</h3>
+                <h4>Operator</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                  I used to hydrostatically pressure test blow-out-preventers(BOP) on drilling rigs. This is important because the BOP was essential in ensuring the safety of everyone on site. 
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="September 2015 – May 2017">
+                <h3>Texas Department of Criminal Justice</h3>
+                <h4>Officer III</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    My duties included maintaining custody and control of T.D.C.J. Offenders.
                 </p>
             </div>
         </div>
